tests/snapshots/integration__fail__invalid_syntax.sol.snap
---
source: tests/integration.rs
expression: output
---
error: unexpected token
  ┌─ tests/files/fail/invalid_syntax.sol:1:1
  │
1 │ if
  │ ^ did not expect token of `EndOfFile` type
